--- a/application/views/clientes/index.html
+++ b/application/views/clientes/index.html
@@ -1,5 +1,5 @@
 $def with(result)
-<h1>Index</h1>
+<h1>Inicio Raices Administrador</h1>
 <table id="datos_tabla" class="table table-hover" cellspacing="0" width="100%">
     <thead>
         <th>Nombre</th>
