--- a/application/views/clientes/master.html
+++ b/application/views/clientes/master.html
@@ -8,7 +8,7 @@ $def with (page)
 
 <head>
     <title>Raices_v1</title>
-    <link rel="icon" type="image/png" href="/static/QuetzalStockNARANJA.png">
+    <link rel="icon" type="image/png" href="/static/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Cache-Control" content="no-cache, max-age=0, no-store, must-revalidate" />
     <link href="../../static/css/bootstrap.css" rel="stylesheet" media="screen">
@@ -24,11 +24,11 @@ $def with (page)
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Raices_v1</a>
+                <a class="navbar-brand" href="/">Raices</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class='active'><a href="/">Raices_v1</a></li>
+                    <li class='active'><a href="/">Raices</a></li>
                     <li><a href="/api_clientes?user_hash=12345&action=get"><span class="glyphicon glyphicon-plus"></span> Ver todos los Clientes</a></li>
                     <li><a href="/insert"><span class="glyphicon glyphicon-plus"></span> Insertar</a></li>
                 </ul>
@@ -42,7 +42,7 @@ $def with (page)
     <div class="navbar  navbar-inverse navbar-fixed-bottom">
         <div class="container">
             <div class="navbar-text pull=left">
-                <p> © Kuorra 2017</p>
+                <p> © Raices 2019</p>
             </div>
 
         </div>
