--- a/application/views/clientes/master.html
+++ b/application/views/clientes/master.html
@@ -29,7 +29,7 @@ $def with (page)
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class='active'><a href="/">Raices</a></li>
-                    <li><a href="/api_clientes?user_hash=12345&action=get"><span class="glyphicon glyphicon-plus"></span> Ver todos los Clientes</a></li>
+                    <li><a href="/api_clientes?user_hash=12345&action=get"><span class="glyphicon glyphicon-plus"></span> Ver Usuarios</a></li>
                     <li><a href="/insert"><span class="glyphicon glyphicon-plus"></span> Insertar</a></li>
                 </ul>
             </div>
