--- a/application/views/clientes/view.html
+++ b/application/views/clientes/view.html
@@ -1,6 +1,6 @@
 $def with(result)
 <h3>
-    <a href="/clientes">Clientes</a>
+    <a href="/clientes">Usuarios</a>
 </h3>
 Nombre $result.nombre<br>
 Apellido Paterno $result.apellido_paterno<br>
