--- a/application/views/clientes/insert.html
+++ b/application/views/clientes/insert.html
@@ -1,6 +1,6 @@
 $def with(form)
 <h3>
-    <a href="/clientes">Clientes</a>
+    <a href="/clientes">Usuarios</a>
 </h3>
 <form name="main" method="POST">
     $for input in form.inputs:
